--- a/build.css
+++ b/build.css
@@ -1,3 +1,92 @@
+@font-face {
+  font-family: "niagara_solidregular";
+  src: url("font/niagsol-webfont.woff2") format("woff2"), url("font/niagsol-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+* {
+  margin: 0 auto;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+body {
+  font-family: "niagara_solidregular";
+  background-color: #95BCE6;
+}
+body .landing {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+}
+body .landing .image {
+  width: 50%;
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  border-bottom: 3px solid #232C36;
+}
+body .landing .image img {
+  height: 550px;
+  margin-bottom: 0px;
+  margin-top: 92px;
+}
+body .landing .droite {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+body .landing .droite .hugo {
+  width: 100%;
+  height: 40vh;
+  font-size: 170px;
+  display: flex;
+  justify-content: center;
+}
+body .landing .droite .hugo p {
+  margin-top: 80px;
+}
+body .landing .droite .developpeur {
+  width: 100%;
+  height: 50vh;
+  font-size: 170px;
+  display: flex;
+  justify-content: center;
+  color: white;
+  border-left: 3px solid #232C36;
+  border-top: 3px solid #232C36;
+}
+body .fondblanc {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  background-color: white;
+}
+body .fondblanc .about {
+  width: 50%;
+  height: 100vh;
+  text-align: center;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+body .fondblanc .about p {
+  font-size: 170px;
+}
+body .fondblanc .text {
+  width: 50%;
+  height: 70vh;
+  margin-top: 15vh;
+  text-align: center;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  font-size: 60px;
+  border-left: 3px solid #95BCE6;
+}
+body .fondblanc .text p {
+  padding: 100px;
+}
 
 /*# sourceMappingURL=build.css.map */
