--- a/style.scss
+++ b/style.scss
@@ -60,13 +60,14 @@ body{
     }
     .fondblanc{
         width: 100%;
-        height: 100vh;
+        height: 115vh;
         display: flex;
         justify-content: center;
         background-color: white;
         .about{
             width: 50%;
             height: 100vh;
+            margin-top: 10vh;
             text-align: center;
             align-items: center;
             display: flex;
@@ -78,7 +79,7 @@ body{
         .text{
             width: 50%;
             height: 70vh;
-            margin-top: 15vh;
+            margin-top: 25vh;
             text-align: center;
             align-items: center;
             display: flex;
@@ -87,6 +88,106 @@ body{
             border-left: 3px solid #95BCE6;
             p{
                 padding: 100px;
+            }
+        }
+    }
+    .projets{
+        width: 100%;
+        height: 350vh;
+        .titre{
+            text-align: center;
+            font-size: 200px;
+            margin-top: 10vh;
+            margin-bottom: 10vh;
+        }
+        .projet1{
+            width: 90%;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-top: 3px solid white;
+            .imgsite{
+                width: 60%;
+                height: 60vh;
+                background-color: white;
+                box-shadow: 5px 5px 15px #232C36;
+            }
+            .textsite{
+                width: 40%;
+                height: 50%;
+                text-align: center;
+                align-items: center;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                #nomsite{
+                    font-size:50px ;
+                    margin-bottom: 10vh;
+                }
+                p{
+                    font-size: 30px;
+                }
+            }
+        }
+        .projet2{
+            width: 90%;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-top: 3px solid white;
+            .imgsite{
+                width: 60%;
+                height: 60vh;
+                background-color: white;
+                box-shadow: 5px 5px 15px #232C36;
+            }
+            .textsite{
+                width: 40%;
+                height: 50%;
+                text-align: center;
+                align-items: center;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                #nomsite{
+                    font-size:50px ;
+                    margin-bottom: 10vh;
+                }
+                p{
+                    font-size: 30px;
+                }
+            }
+        }
+        .projet3{
+            width: 90%;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-top: 3px solid white;
+            .imgsite{
+                width: 60%;
+                height: 60vh;
+                background-color: white;
+                box-shadow: 5px 5px 15px #232C36;
+            }
+            .textsite{
+                width: 40%;
+                height: 50%;
+                text-align: center;
+                align-items: center;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                #nomsite{
+                    font-size:50px ;
+                    margin-bottom: 10vh;
+                }
+                p{
+                    font-size: 30px;
+                }
             }
         }
     }
