--- a/style.scss
+++ b/style.scss
@@ -44,6 +44,15 @@ header{
 body{
     font-family:'niagara_solidregular';
     background-color: #95BCE6;
+    .reveal{
+        opacity: 0;
+        transform:translateY(-30px);
+    }
+    .reveal-visible{
+        opacity: 1;
+        transform:translateY(0);
+        transition: .3s;
+    }
     .landing{
         width: 100%;
         height: 100vh;
