--- a/build.css
+++ b/build.css
@@ -34,6 +34,23 @@ header .headerlink ul {
   font-size: 40px;
   margin-top: 10px;
 }
+header .headerlink ul li {
+  position: relative;
+  cursor: pointer;
+}
+header .headerlink ul li:after {
+  content: "";
+  position: absolute;
+  background-color: white;
+  height: 3px;
+  width: 0;
+  left: 0;
+  bottom: -1px;
+  transition: 0.3s;
+}
+header .headerlink ul li:hover:after {
+  width: 100%;
+}
 header .modal {
   width: 10%;
 }
@@ -85,6 +102,7 @@ body .landing .droite .hugo p {
   margin-top: 80px;
 }
 body .landing .droite .developpeur {
+  position: relative;
   width: 100%;
   height: 44vh;
   font-size: 170px;
@@ -149,7 +167,7 @@ body .projets .projet1 .imgsite {
   width: 60%;
   height: 60vh;
   background-color: white;
-  box-shadow: 5px 5px 15px #232C36;
+  box-shadow: 16px 14px 20px #232C36;
 }
 body .projets .projet1 .textsite {
   width: 40%;
@@ -179,7 +197,7 @@ body .projets .projet2 .imgsite {
   width: 60%;
   height: 60vh;
   background-color: white;
-  box-shadow: 5px 5px 15px #232C36;
+  box-shadow: 16px 14px 20px #232C36;
 }
 body .projets .projet2 .textsite {
   width: 40%;
@@ -209,7 +227,7 @@ body .projets .projet3 .imgsite {
   width: 60%;
   height: 60vh;
   background-color: white;
-  box-shadow: 5px 5px 15px #232C36;
+  box-shadow: 16px 14px 20px #232C36;
 }
 body .projets .projet3 .textsite {
   width: 40%;
