--- a/style.scss
+++ b/style.scss
@@ -34,6 +34,23 @@ header{
             gap: 50px;
             font-size: 40px;
             margin-top: 10px;
+            li{
+                position: relative;
+                cursor: pointer;
+            }
+            li:after{
+                content: "";
+                position: absolute;
+                background-color: white;
+                height: 3px;
+                width: 0;
+                left: 0;
+                bottom: -1px;
+                transition: 0.3s;
+            }
+            li:hover:after{
+                width: 100%;
+            }
         }
     }
     .modal{
@@ -85,6 +102,7 @@ body{
                 }
             }
             .developpeur{
+                position: relative;
                 width: 100%;
                 height: 44vh;
                 font-size: 170px;
@@ -149,7 +167,7 @@ body{
                 width: 60%;
                 height: 60vh;
                 background-color: white;
-                box-shadow: 5px 5px 15px #232C36;
+                box-shadow: 16px 14px 20px #232C36;
             }
             .textsite{
                 width: 40%;
@@ -179,7 +197,7 @@ body{
                 width: 60%;
                 height: 60vh;
                 background-color: white;
-                box-shadow: 5px 5px 15px #232C36;
+                box-shadow: 16px 14px 20px #232C36;
             }
             .textsite{
                 width: 40%;
@@ -209,7 +227,7 @@ body{
                 width: 60%;
                 height: 60vh;
                 background-color: white;
-                box-shadow: 5px 5px 15px #232C36;
+                box-shadow: 16px 14px 20px #232C36;
             }
             .textsite{
                 width: 40%;
