--- a/build.css
+++ b/build.css
@@ -346,14 +346,14 @@ footer .footer .cv img {
   height: 220px;
   margin-top: 45px;
 }
-footer .footer .cv p {
+footer .footer .cv a {
   font-size: 50px;
   margin-top: 10px;
   color: white;
   position: relative;
   cursor: pointer;
 }
-footer .footer .cv p:after {
+footer .footer .cv a:after {
   content: "";
   position: absolute;
   background-color: white;
@@ -363,7 +363,7 @@ footer .footer .cv p:after {
   bottom: -1px;
   transition: 0.3s;
 }
-footer .footer .cv p:hover:after {
+footer .footer .cv a:hover:after {
   width: 100%;
 }
 footer #C2022 p {
