:sparkles: nouvelles animations

--- a/build.css
+++ b/build.css
@@ -178,11 +178,29 @@ body .projets .projet1 .imgsite {
   width: 60%;
   height: 60vh;
   box-shadow: 16px 14px 20px #232C36;
+  background-color: #232C36;
   overflow: hidden;
 }
 body .projets .projet1 .imgsite img {
   width: 100%;
   height: 100%;
+  position: relative;
+}
+body .projets .projet1 .imgsite p {
+  position: absolute;
+  font-size: 60px;
+  color: white;
+  top: 20%;
+  width: 60%;
+  height: 60.2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  background-color: #232C36;
+}
+body .projets .projet1 .imgsite p:hover {
+  opacity: 90%;
 }
 body .projets .projet1 .textsite {
   width: 40%;
@@ -229,6 +247,23 @@ body .projets .projet2 .imgsite {
 body .projets .projet2 .imgsite img {
   width: 100%;
   height: 100%;
+  position: relative;
+}
+body .projets .projet2 .imgsite p {
+  position: absolute;
+  font-size: 60px;
+  color: white;
+  top: 20%;
+  width: 60%;
+  height: 60.2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  background-color: #232C36;
+}
+body .projets .projet2 .imgsite p:hover {
+  opacity: 90%;
 }
 body .projets .projet2 .textsite {
   width: 40%;
