--- a/build.css
+++ b/build.css
@@ -454,4 +454,12 @@ body #butonindex:hover {
   color: white;
 }
 
+body .sliderT-coach img {
+  width: 800px;
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  margin-top: 35px;
+}
+
 /*# sourceMappingURL=build.css.map */
