--- a/style.scss
+++ b/style.scss
@@ -463,3 +463,18 @@ body{
         color: white;
     }
 }
+
+// T-COACH 
+
+body{
+    .sliderT-coach{
+        img{
+            width: 800px;
+            height: 400px;
+            display: flex;
+            justify-content: center;
+            margin-top: 35px;
+        }
+    }  
+}
+
