--- a/style.scss
+++ b/style.scss
@@ -26,6 +26,9 @@ header{
         span{
             color: #232C36;
         }
+        a{
+            color: white;
+        }
     }
     .headerlink{
         width: 40%;
@@ -134,7 +137,7 @@ body{
         .about{
             width: 50%;
             height: 100vh;
-            margin-top: 10vh;
+            margin-top: 5vh;
             text-align: center;
             align-items: center;
             display: flex;
@@ -146,7 +149,7 @@ body{
         .text{
             width: 50%;
             height: 70vh;
-            margin-top: 25vh;
+            margin-top: 20vh;
             text-align: center;
             align-items: center;
             display: flex;
@@ -467,14 +470,278 @@ body{
 // T-COACH 
 
 body{
-    .sliderT-coach{
-        img{
-            width: 800px;
-            height: 400px;
-            display: flex;
-            justify-content: center;
-            margin-top: 35px;
+    .landingT-coach{
+        .sliderT-coach{
+            img{
+                width: 800px;
+                height: 400px;
+                display: flex;
+                justify-content: center;
+                margin-top: 35px;
+                box-shadow: 16px 14px 20px #232C36;
+            }
         }
-    }  
+        #t-coachtitre{
+            text-align: center;
+            color: #232C36;
+            font-size: 80px;
+            margin-top: 30px;
+        }
+        p{
+            text-align: center;
+            color: white;
+            font-size: 50px;
+        }  
+    }
+    .prest-coach{
+        margin-top: 100px;
+        width: 100%;
+        height: 140vh;
+        .haut{
+            width: 100%;
+            height: 50vh;
+            display: flex;
+            .imghaut{
+                width: 40%;
+                img{
+                    width: 420px;
+                    height: 220px;
+                    display: flex;
+                    justify-content: center;
+                    margin-top: 50px;
+                    box-shadow: 16px 14px 20px #232C36;
+                }
+            }
+            #textehaut{
+                text-align: center;
+                width: 40%;
+                font-size: 40px;
+                display: flex;
+                align-items: center;
+            }
+            .chartre{
+                width: 30%;
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                p{
+                    text-align: center;
+                }
+                .bleu{
+                    width: 100%;
+                    height: 33.333%;
+                    div{
+                        width: 75px;
+                        height: 75px;
+                        background-color: #0E89C2;
+                        border: 2px solid #232C36;
+                        margin-top: 5px;
+                    }
+                }
+                .noir{
+                    width: 100%;
+                    height: 33.333%;
+                    div{
+                        width: 75px;
+                        height: 75px;
+                        background-color: rgba(34, 34, 34, 0.986);
+                        border: 2px solid #232C36;
+                        margin-top: 5px;
+                    }
+                }
+                .gris{
+                    width: 100%;
+                    height: 33.333%;
+                    div{
+                        width: 75px;
+                        height: 75px;
+                        background-color: #BEBEBE;
+                        border: 2px solid #232C36;
+                        margin-top: 5px;
+                    }
+                }
+            }
+        }
+        .bas{
+            display: flex;
+            justify-content: space-between;
+            width: 80%;
+            border-top: 3px solid #232C36;
+            margin-top: 50px;
+            .imgbasgauche{
+                width: 40%;
+                height: 60vh;
+                img{
+                    width: 420px;
+                    height: 220px;
+                    display: flex;
+                    justify-content: center;
+                    margin-top: 50px;
+                    box-shadow: 16px 14px 20px #232C36;
+                }
+                p{
+                    margin-top: 30px;
+                    font-size: 30px;
+                    text-align: center;
+                }
+            }
+            .imgbasdroite{
+                width: 40%;
+                height: 60vh;
+                img{
+                    width: 420px;
+                    height: 220px;
+                    display: flex;
+                    justify-content: center;
+                    margin-top: 50px;
+                    box-shadow: 16px 14px 20px #232C36;
+                }
+                p{
+                    margin-top: 30px;
+                    font-size: 30px;
+                    text-align: center;
+                }
+            }
+        }
+    }
+}
+
+// Château de Versailles
+
+body{
+    .landingchateau{
+        .sliderchateau{
+            img{
+                width: 800px;
+                height: 400px;
+                display: flex;
+                justify-content: center;
+                margin-top: 35px;
+                box-shadow: 16px 14px 20px #232C36;
+            }
+        }
+        #chateautitre{
+            text-align: center;
+            color: #232C36;
+            font-size: 80px;
+            margin-top: 30px;
+        }
+        p{
+            text-align: center;
+            color: white;
+            font-size: 50px;
+        }  
+    }
+    .prest-chateau{
+        margin-top: 100px;
+        width: 100%;
+        height: 140vh;
+        .haut{
+            width: 100%;
+            height: 50vh;
+            display: flex;
+            .imghaut{
+                width: 40%;
+                img{
+                    width: 420px;
+                    height: 220px;
+                    display: flex;
+                    justify-content: center;
+                    margin-top: 50px;
+                    box-shadow: 16px 14px 20px #232C36;
+                }
+            }
+            #textehaut{
+                text-align: center;
+                width: 40%;
+                font-size: 40px;
+                display: flex;
+                align-items: center;
+            }
+            .chartre{
+                width: 30%;
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                p{
+                    text-align: center;
+                }
+                .bleu{
+                    width: 100%;
+                    height: 33.333%;
+                    div{
+                        width: 75px;
+                        height: 75px;
+                        background-color: #ffe4c4;
+                        border: 2px solid #232C36;
+                        margin-top: 5px;
+                    }
+                }
+                .noir{
+                    width: 100%;
+                    height: 33.333%;
+                    div{
+                        width: 75px;
+                        height: 75px;
+                        background-color: #B39878;
+                        border: 2px solid #232C36;
+                        margin-top: 5px;
+                    }
+                }
+                .gris{
+                    width: 100%;
+                    height: 33.333%;
+                    div{
+                        width: 75px;
+                        height: 75px;
+                        background-color: #040404;
+                        border: 2px solid #232C36;
+                        margin-top: 5px;
+                    }
+                }
+            }
+        }
+        .bas{
+            display: flex;
+            justify-content: space-between;
+            width: 80%;
+            border-top: 3px solid #232C36;
+            margin-top: 50px;
+            .imgbasgauche{
+                width: 40%;
+                height: 60vh;
+                img{
+                    width: 420px;
+                    height: 220px;
+                    display: flex;
+                    justify-content: center;
+                    margin-top: 50px;
+                    box-shadow: 16px 14px 20px #232C36;
+                }
+                p{
+                    margin-top: 30px;
+                    font-size: 30px;
+                    text-align: center;
+                }
+            }
+            .imgbasdroite{
+                width: 40%;
+                height: 60vh;
+                img{
+                    width: 420px;
+                    height: 220px;
+                    display: flex;
+                    justify-content: center;
+                    margin-top: 50px;
+                    box-shadow: 16px 14px 20px #232C36;
+                }
+                p{
+                    margin-top: 30px;
+                    font-size: 30px;
+                    text-align: center;
+                }
+            }
+        }
+    }
 }
 
