--- a/build.css
+++ b/build.css
@@ -738,8 +738,7 @@ body .prest-chateau .bas .imgbasdroite p {
     text-align: center;
   }
   body .landing .droite .developpeur {
-    margin-top: 40px;
-    height: 235px;
+    height: 275px;
   }
   body .landing .droite .developpeur p {
     font-size: 80px;
@@ -806,6 +805,11 @@ body .prest-chateau .bas .imgbasdroite p {
   }
   body .projets .projet3 .textsite {
     margin-top: 20px;
+  }
+  body .projets .landingT-coach .sliderT-coach img {
+    width: 400px;
+    height: 250px;
+    margin-top: 150px;
   }
   footer .footer .textlink .imglink {
     margin: 0;
