--- a/style.scss
+++ b/style.scss
@@ -746,6 +746,7 @@ body{
 
 //responsive
 
+
 @media screen and (max-width: 426px){
     header{
         height: auto;
@@ -777,8 +778,7 @@ body{
                     }
                 }
                 .developpeur{
-                    margin-top: 40px;
-                    height: 235px;
+                    height: 275px;
                     p{
                         font-size: 80px;
                     }
@@ -855,6 +855,16 @@ body{
                     margin-top: 20px;   
                 }
             }
+            .landingT-coach{
+                .sliderT-coach{
+                    img{
+                        width: 400px;
+                        height: 250px;
+                        margin-top: 150px;
+                    }
+                }
+            }
+        
         }
     }
     footer{
